force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/nXBI__Business_Credit_Demographics__c.object-meta.xml
<CustomObject>
    <label>Business Credit Demographics</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Business Demographics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Demographics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>