force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Annual_Sales_Range_Code__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Annual_Sales_Range_Code__c</fullName>
    <label>Annual Sales Range Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>