force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Business_Type__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Business_Type__c</fullName>
    <label>Business Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>