force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Company_Ownership__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Company_Ownership__c</fullName>
    <label>Company Ownership</label>
    <length>80</length>
    <type>Text</type>
</CustomField>