force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Date_Founded__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Date_Founded__c</fullName>
    <label>Date Founded</label>
    <type>Date</type>
</CustomField>