force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Location_Description_Code__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Location_Description_Code__c</fullName>
    <label>Location Description Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>