force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Number_Of_Employees__c</fullName>
    <label>Number Of Employees</label>
    <length>80</length>
    <type>Text</type>
</CustomField>