force-app/main/default/objects/nXBI__Business_Credit_Demographics__c/fields/nXBI__Number_Of_Employees_Code__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Number_Of_Employees_Code__c</fullName>
    <label>Number Of Employees Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>